--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -14,6 +14,8 @@ jobs:
         arch: [ x86, x64 ]
 
     steps:
+    - uses: actions/checkout@v3
+
     - name: Add MSBuild to PATH
       uses: microsoft/setup-msbuild@v1.1
       with:
