--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -26,8 +26,7 @@ jobs:
        pip install meson
 
     - name: Build
-      run: |
-        ./lib/external/generate.bat
+      run: ./lib/external/generate.ps1
 
     - name: Archive
       uses: actions/upload-artifact@v3
