--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -18,10 +18,10 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Add MSBuild to PATH
-      uses: microsoft/setup-msbuild@v1.1
+    - name: Set up Visual Studio shell
+      uses: egor-tensin/vs-shell@v2
       with:
-        msbuild-architecture: ${{ matrix.arch }}
+        arch: ${{ matrix.arch }}
     
     - name: Install Meson
       run: |
