--- a/.github/workflows/external.yml
+++ b/.github/workflows/external.yml
@@ -3,10 +3,14 @@ name: build external libs
 on:
   push:
     branches: [ master ]
-    paths: [ lib/external/generate.ps1 ]
+    paths: 
+      - lib/external/generate.ps1
+      - .github/workflows/external.yml
   pull_request:
     branches: [ master ]
-    paths: [ lib/external/generate.ps1 ]
+    paths: 
+      - lib/external/generate.ps1
+      - .github/workflows/external.yml
 
 jobs:
   build:
